# turchcraft

./: CMakeLists.txt
dependencies/include/glad/: glad.h
res/shaders/: Fragment.shader  PickingFragment.shader  Vertex.shader
src/: Cube.cpp  Cube.h  Engine.cpp  Engine.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  Window.cpp  Window.h  glad.c  main.cpp
